@@ -1,0 +1,17 @@
+<!DOCTYPE html
+          PUBLIC "-//W3C//DTD HTML 1.0 Transitional//EN"
+          SYSTEM "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <link rel="stylesheet" type="text/css" href="blue.css">
+    <title>TITLE</title>
+  </head>
+  <body topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" marginheight="0" marginwidth="0">
+
+<!--#include virtual="header.html"-->
+	    <br>FSF France
+<!--#include virtual="footer.html"-->
+
+  </body>
+</html>
