@@ -1,0 +1,54 @@
+	  </td>
+
+	  <!-- Menu column. On the right to be Lynx friendly.  -->
+	  <td>&nbsp;</td>
+	  <td valign="top" class="TopBody">
+	    <table width="120" border="0" cellspacing="0" cellpadding="4">
+		<tr><td class="TopTitle" align="center">FSF France</td></tr>
+		<tr>
+		  <td align="right">
+		    <a href="http://agenda.lolix.org/" class="T2">Agenda</a><br>
+		    <a href="http://savannah.gnu.org/pm/task.php?group_project_id=37&group_id=53&func=browse" class="T2">T&acirc;ches</a><br>
+		    <a href="http://mailman.fsfeurope.org/mailman/listinfo/france" class="T2">Mailing List</a><br>
+		    <a href="http://savannah.gnu.org/project/memberlist.php?group_id=148" class="T2">Who's Who</a><br>
+		  </td>
+		</tr>
+		<tr><td class="TopTitle" align="center">Adminsys</td></tr>
+		<tr>
+		  <td class="TopBody" align="right">
+		    <a href="http://france.fsfeurope.org/server/" class="T2">Guide</a><br>
+		    <a href="http://savannah.gnu.org/projects/fsffr/" class="T2">Comptes</a><br>
+		    <a href="http://france.fsfeurope.org/birth/" class="T2">Naissance</a><br>
+		  </td>
+		</tr>
+		<tr><td class="TopTitle" align="center">Webmaster</td></tr>
+		<tr>
+		  <td class="TopBody" align="right">
+		    <a href="http://www.gnu.org/server/standards/" class="T2">Guide</a><br>
+		    <a href="http://mailman.fsfeurope.org/mailman/listinfo/web" class="T2">Mailing List</a><br>
+		  </td>
+		</tr>
+	    </table>
+	  </td>
+    	</tr>
+    </table>
+
+    <!-- Bottom line -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="2">
+	<tr>
+	  <td class="TopTitle">
+	    &nbsp;<a href="mailto:webmaster@fsfeurope.org" class="T1">webmaster@fsfeurope.org</a><br>
+	  </td>
+	</tr>
+	<tr>
+	  <td class="TopBody" align="center">
+	    Copyright (C) 2001 FSF France,
+	    8 rue Riant, 93200 Saint Denis, France
+	    <p />
+	    La reproduction exacte et la distribution int&eacute;grale
+	    de cet article est permise sur n'importe quel support
+	    d'archivage, pourvu que cette notice est
+	    pr&eacute;serv&eacute;e.
+	  </td>
+	</tr>
+    </table>
