@@ -1,0 +1,64 @@
+    <!-- FSF related sites -->
+    <table cellspacing="0" cellpadding="0" width="100%" border="0">
+	<tr valign="middle" bgcolor="#6f6f6f">
+	  <td><img src="http://france.fsfeurope.org/images/pix.png" width="1" height="1" alt=""></td>
+	</tr>
+    </table>
+    <table cellspacing="0" cellpadding="1" width="100%" border="0"> 
+	<tr valign="middle"> 
+	  <td class="newstext">
+	    &nbsp;
+	    <a class="topbanner" href="http://www.fsf.org/">FSF</a>&nbsp;&middot;&nbsp;
+	    <a class="topbanner" href="http://www.fsfeurope.org/">FSF Europe</a>&nbsp;&middot;&nbsp;
+	    <a class="topbanner" href="http://france.fsfeurope.org/">FSF France</a>&nbsp;&middot;&nbsp;
+	    <a class="topbanner" href="http://www.gnu.org/">GNU</a>&nbsp;&middot;&nbsp;
+	    <a class="topbanner" href="http://es.gnu.org/">GNU Espagne</a>&nbsp;&middot;&nbsp;
+	    <a class="topbanner" href="http://www.april.org/">April</a>&nbsp;&middot;&nbsp;
+	    <a class="topbanner" href="http://www.lsfn.org/">LSFN</a>&nbsp;&middot;&nbsp;
+	  </td>
+    </table>
+    <table cellspacing="0" cellpadding="0" width="100%" border="0">
+	<tr valign="middle" bgcolor="#6f6f6f">
+	  <td><img src="http://france.fsfeurope.org/images/pix.png" width="1" height="1" alt=""></td>
+	</tr>
+    </table>
+
+    <!-- Top menu line -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="4">
+	<tr>
+	  <td class="TopTitle">
+	    <a href="http://france.fsfeurope.org/" class="T1">Home</A> |
+	    <a href="http://france.fsfeurope.org/contact.html" class="T1">Contact</a> |
+	    <a href="http://france.fsfeurope.org/thanks.html" class="T1">Merci</a> |
+	    <a href="http://france.fsfeurope.org/mrtg/" class="T1">Stats</a>
+	  </td>
+	  <td class="TopTitle" align="right">
+	    <a href="http://france.fsfeurope.org/about.html" class="T1">A propos</a>
+	  </td>
+	</tr>
+    </table>
+
+    <!-- Title bar -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="4">
+	<tr>
+	  <td class="TopBody">
+	    <a href="http://france.fsfeurope.org/">
+	      <img src="http://france.fsfeurope.org/images/gnulogo.jpg" alt="GNU Logo" border="0">
+	    </a>
+	  </td>
+	  <td class="TopBody" width="99%" height="99%">
+	    <a class="TopTitleB">FSF France</a>
+	    <br>
+	    <a class="TopTitle">Le Logiciel Libre est la conscience du logiciel</a>
+	  </td>
+	  <td align="right" valign="bottom" class="TopBody">
+	    <a href="http://france.fsfeurope.org/" class="T2">France</a>
+	    <a href="http://www.fsfeurope.org/" class="T2">Europe</a>
+	    <a href="http://www.fsf.org/" class="T2">Etats-Unis</a>
+	  </td>
+	</tr>
+    </table>
+
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+	<tr>
+	  <td width="99%" valign="top">
