@@ -1,3 +1,11 @@
+Mon Apr 16 12:37:41 2001  Loic Dachary  <loic@gnu.org>
+
+	* fr/{boilerplate.shtml,header.html,footer.html,blue.css}: 
+	  temporary boilerplate while waiting for a proper layout
+	  for FSF Europe web sites.
+	
+	* fr/images/{gnulogo.jpg,pix.png}: graphics for boilerplate
+
 Sun Apr 15 12:05:14 2001  Loic Dachary <loic@gnu.org>
 
 	* fr/server/sysadmin-france.texi: Account Management chapter
@@ -14,6 +22,10 @@ Fri Apr 13 16:11:05 2001  Loic Dachary  <loic@gnu.org>
 Fri Apr 13 16:00:52 2001  Loic Dachary  <loic@gnu.org>
 
 	* fsfe/fr/birth: Add birth act of france.fsfeurope.org
+
+Fri Apr 13 15:25:36 2001  Loic Dachary  <loic@senga.org>
+
+	* fr: Subdirectory for the france.fsfeurope.org web site
 
 Fri Apr 13 14:40:42 2001  Loic Dachary  <loic@senga.org>
 
